@@ -19,7 +19,6 @@ import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.TextStyle;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
@@ -57,8 +56,7 @@ public class DashboardServiceImpl implements DashboardService {
                         totalRevenue = BigDecimal.ZERO;
 
                 long inQueue = appointmentRepository.countByStatusInAndAppointmentTimeBetween(
-                                Arrays.asList(AppointmentStatus.CHECKED_IN, AppointmentStatus.IN_CONSULTATION,
-                                                AppointmentStatus.CONFIRMED),
+                                List.of(AppointmentStatus.CHECKED_IN, AppointmentStatus.IN_CONSULTATION),
                                 startOfDay, endOfDay);
 
                 long consultations = appointmentRepository.countByStatusAndUpdatedAtBetween(
